--- a/api/DotNet.Docker.csproj
+++ b/api/DotNet.Docker.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
   <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  <PackageReference Include="DotEnv" Version="0.0.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
