--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,10 +7,10 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["api.csproj", "./"]
-RUN dotnet restore "api.csproj"
+COPY ["api.csproj", "api/"]
+RUN dotnet restore "api/api.csproj"
+WORKDIR "/src/api/"
 COPY . .
-WORKDIR "/src/api"
 RUN dotnet build "api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
