fix: connection string

--- a/client/appsettings.json
+++ b/client/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;uid=root;pwd=root;"
+    "DefaultConnection": "Server=db;Port=3306;Uid=root;Pwd=user123"
   }
 }
