--- a/product/appsettings.json
+++ b/product/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Port=3306;Uid=root;Pwd=user123"
+  }
 }
