--- a/client/client.csproj
+++ b/client/client.csproj
@@ -11,9 +11,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="DotEnv" Version="0.0.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="MySql.Data" Version="8.3.0" />
+        <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00336" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
