refactor: remove data.map

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,16 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: user123
+    volumes:
+      - ./scripts:/docker-entrypoint-initdb.d
+
   client:
     build: ./client  
     ports: 
       - "8080:8080"
     depends_on: 
       - db
+
   product:
     build: ./product  
     ports: 
