--- a/client_tests/client_tests.csproj
+++ b/client_tests/client_tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\client\client.csproj" />
+  </ItemGroup>
+
 </Project>
