--- a/quotation/quotation.csproj
+++ b/quotation/quotation.csproj
@@ -4,6 +4,26 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
+    
+  <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+      <PackageReference Include="MySql.Data" Version="8.3.0" />
+      <PackageReference Include="Refit" Version="7.0.0" />
+      <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
+      <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
+      <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00336" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
+  </ItemGroup>
+
 
 </Project>
