--- a/quotation/appsettings.json
+++ b/quotation/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Port=3306;Uid=root;Pwd=user123"
+  },
+  "External": {
+    "AwesomeApi": "https://economia.awesomeapi.com.br"
+  }
 }
