--- a/quotation/quotation.csproj
+++ b/quotation/quotation.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
       <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00336" />
       <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
+      <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
   
