--- a/quotation/appsettings.json
+++ b/quotation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Port=3306;Uid=root;Pwd=user123"
+    "DefaultConnection": "redis:6379"
   },
   "External": {
     "AwesomeApi": "https://economia.awesomeapi.com.br"
