--- a/product/product.csproj
+++ b/product/product.csproj
@@ -12,6 +12,9 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="MySql.Data" Version="8.3.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Refit" Version="7.0.0" />
+        <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
         <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.2-dev-00336" />
         <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
