feat: quotation api URL

--- a/product/appsettings.json
+++ b/product/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=db;Port=3306;Uid=root;Pwd=user123"
+  },
+  "External": {
+    "QuotationApi": "localhost:6060"
   }
 }
