--- a/product/appsettings.json
+++ b/product/appsettings.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Server=db;Port=3306;Uid=root;Pwd=user123"
   },
   "External": {
-    "QuotationApi": "localhost:6060"
+    "QuotationApi": "http://quotation:6060"
   }
 }
