--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 ﻿version: '3.8'
 
 services:
+
   db:
     image: mysql:8.3
     ports:
@@ -16,6 +17,18 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+
+  mongodb:
+    image: mongo:4.4
+    container_name: mongodb
+    restart: always
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: user123
+    volumes:
+      - ./scripts:/docker-entrypoint-initdb.d
 
   client:
     build: ./client  
