--- a/sales/appsettings.json
+++ b/sales/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://root:user123@localhost:27017"
+  }
 }
