fix: connection string

--- a/sales/appsettings.json
+++ b/sales/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "mongodb://root:user123@localhost:27017"
+    "DefaultConnection": "mongodb://root:user123@mongodb:27017"
   }
 }
