--- a/scripts/proxy/nginx.conf
+++ b/scripts/proxy/nginx.conf
@@ -1,18 +1,39 @@
 server {
   listen 80;
+
   location /quotation/ {
-    proxy_pass http://quotation:8080/quotation/;
+    proxy_pass http://quotation:8080/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 
   location /product/ {
-    proxy_pass http://products:8080/product/;
+    proxy_pass http://product:8080/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }  
 
   location /client/ {
-    proxy_pass http://clients:8080/client/;
+    proxy_pass http://client:8080/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }
 
   location /sales/ {
-    proxy_pass http://sales:8080/sales/;
+    proxy_pass http://sales:8080/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
   }    
+
+  location / {
+    return 404;
+  }
 }
