--- a/scripts/proxy/nginx.conf
+++ b/scripts/proxy/nginx.conf
@@ -8,7 +8,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }
-
+  
   location /product/ {
     proxy_pass http://product:8080/;
     proxy_set_header Host $host;
@@ -16,6 +16,14 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
   }  
+
+  location /product/swagger {
+    proxy_pass http://product:8080/swagger;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 
   location /client/ {
     proxy_pass http://client:8080/;
